syntax = "proto3";

import "google/protobuf/empty.proto";

package service;

option go_package = "./internal/service";

service PubSub {
    rpc Subscribe(SubscribeRequest) returns (stream Event);
    rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
    string key = 1;
}

message PublishRequest {
    string key = 1;
    string data = 2;
}

message Event {
    string data = 1;
}